[tool.poetry]
name = "MultipartFormData"
version = "1.3"
description = "Convert the request data to form-data."
license = "Apache-2.0"
readme = "README.md"
authors = ["天枢 <lengyaohui@163.com>"]

homepage = "https://github.com/HttpTesting/pyhttp"
repository = "https://github.com/HttpTesting/pyhttp"


keywords = ["http", "api", "form-data", "content-type"]
classifiers  =  [ 
    "Environment :: Console",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",

]

include = ["LICENSE"]

[tool.poetry.dependencies]
Python = "^3.5"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"